--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
 ext.seleniumVersion = '3.14.0'
+ext.lombokVersion = '1.18.2'
+
 
 repositories {
     mavenCentral()
@@ -18,6 +20,8 @@ repositories {
 dependencies {
     
     compile("org.seleniumhq.selenium:selenium-java:$seleniumVersion")
+
+    testCompile("org.projectlombok:lombok:$lombokVersion")
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
